# CODEX_More_Agent

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  ISSUES.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-python.txt  westcity_db_push.py  westcity_maintenance.py  westcity_migrate.py  westcity_operations_simulator.py  westcity_pool_sync.py
.claude/: settings.json
.claude/commands/: architect.md  deploy.md  retry-test-cmd.md  review.md  security-audit.md  test-gen.md  ui-check.md
demo/todo-demo/: README.md  package.json
docs/architecture/: 2026-03-30-four-item-remediation.md  architecture-usage-guide.md  frontend-bento-execution-plan.md  multi-agent-architecture.md  project-structure-summary.md
docs/progress/: 2026-03-29-progress.md  2026-03-30-progress.md  LATEST.md
ops/systemd/: westcity-healthcheck.service  westcity-healthcheck.timer  westcity-pool-sync.service  westcity-pool-sync.timer
python_tests/: test_westcity_db_push.py  test_westcity_operations_simulator.py  test_westcity_pool_sync.py
samples/: operations-centurytea-connectivity.json  operations.json  static-centurytea-draft.template.json  static-centurytea-final.json  static.json
sql/: pool_schema.sql
sql/migrations/: 0001_base.sql  0002_predeploy_fixes.sql
src/: cli.js  client.js  crypto.js  index.js  validators.js
src/dashboard/: .env.example  .gitignore  (+5 more)
tests/: client.test.js  crypto.test.js
westcity_sync/: __init__.py  logging_utils.py  maintenance.py  migrate.py  westcity_db_push.py  westcity_operations_simulator.py  westcity_pool_sync.py
(+83 files in other folders)
